refactor search queries